# redicheck-ai-plugin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: firm-conventions.md  future-capabilities.md  methodology.md  onboarding.md  precision-thresholds.md  release-process.md
docs/agents/: dev-mode.md  fixture-drift.md
docs/notes/: marketplace-ref-spike.md
docs/reference/: README.md
hooks/: ensure_venv.py  hooks.json  session-start.ps1  session-start.sh
qc_core/: __init__.py  __main__.py  cli.py  db.py  discovery.py  feedback_report.py  markup.py  plugin_config.py
qc_core/door/: __init__.py  column_mapper.py  discover.py  duplicate_findings.py  emit.py  indexer.py  kinds.py  queries.py  resolution.py  synonyms.py  words.py
qc_core/drawing/: __init__.py  config.py  discipline.py  emit.py  indexer.py  kinds.py  matrix.py  parse.py  queries.py
qc_core/foodservice/: __init__.py  cli.py  crosscheck.py  extract.py  indexer.py  kinds.py
qc_core/migrations/: 0001_initial.sql  0002_toc_classes.sql  0003_from_label.sql  0004_drawing_index.sql  0005_sheet_discipline.sql  0006_door_schedule.sql  0007_duplicate_sections.sql  0008_embedded_reports.sql  0009_evidence_lifecycle.sql  0010_spec_placeholders.sql  0011_ref_classification.sql  0012_parse_anomalies.sql  0013_extraction_signal.sql  0014_foodservice_schedules.sql  0015_index_duplicates.sql  0016_building_prefix.sql  0017_index_layers.sql  __init__.py  (+1 more)
scripts/: measure_drawing_precision.py  measure_precision.py  probe_drawing_extraction.py
(+20 files in other folders)
