[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qc-core"
version = "0.7.0"
description = "RediCheck qc-core: local-first spec and drawing index substrate"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
qc-index = "qc_core.cli:qc_index_main"
spec-check = "qc_core.cli:spec_check_main"
spec-check-mcp = "qc_core.cli:spec_check_main"  # deprecated alias; emit is PyMuPDF (ADR-0012), not MCP
drawing-index-qc = "qc_core.cli:drawing_index_main"
door-check = "qc_core.cli:door_check_main"
report-issue = "qc_core.feedback_report:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qc_core*"]

[tool.setuptools.package-data]
qc_core = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "kadlec: tests requiring REDICHECK_KADLEC_LAB_PATH and Specs.pdf",
    "juvenile: tests requiring REDICHECK_JUVENILE_PATH",
    "quarry_oaks: tests requiring REDICHECK_QUARRY_OAKS_PATH",
    "embassy: tests requiring REDICHECK_EMBASSY_SUITES_CLEARWATER_PATH",
]
